# tinman

./: .gitignore  Cargo.toml  README.md
chess/: Cargo.toml
chess/src/: game.rs  lib.rs  moves.rs  variations.rs
chess/src/bitboard/: attacks.rs  mod.rs
chess/src/position/: builder.rs  mod.rs  move_iter.rs  zobrist.rs
chess/tests/: move-gen.rs
protocols/: Cargo.toml
protocols/src/: client.rs  lib.rs  xboard.rs
src/: lib.rs  main.rs  pgn.rs
src/chess/: error.rs  game.rs  mod.rs  moves.rs  variations.rs
src/chess/bitboard/: attacks.rs  mod.rs
src/chess/position/: builder.rs  mod.rs  moves.rs  zobrist.rs
src/client/: mod.rs
src/engine/: eval.rs  hash.rs  mod.rs
src/protocol/: io.rs  mod.rs  xboard.rs
tests/: move-gen.rs
tinman-test/: Cargo.toml
tinman-test/src/: lib.rs  main.rs  pgn.rs
