[package]
name = "tinman"
version = "0.3.0"
authors = ["Mike Leany <55358344+mikeleany@users.noreply.github.com>"]
license = "MPL-2.0"
edition = "2018"
default-run = "tinman"

[dependencies]
regex = "1.3.1"
lazy_static = "1.4.0"
log = "0.4.8"
simplelog = "0.7.4"
serde = "1.0"
serde_yaml = "0.8"
rand = "0.7.3"
chrono = "0.4.10"
hostname = "0.3.0"
dirs = "2.0.2"

[dependencies.clap]
version = "2.33.0"
features = [ "wrap_help" ]
