[workspace]
members = ["tinman-test", "chess", "protocols"]

[package]
name = "tinman"
version = "0.4.1-dev1-docs"
authors = ["Mike Leany <55358344+mikeleany@users.noreply.github.com>"]
license = "MPL-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
chess = { path = "chess" }
protocols = { path = "protocols" }
log = "0.4.8"
simplelog = "0.7.4"
dirs = "2.0.2"

[dependencies.clap]
version = "2.33.0"
features = [ "wrap_help" ]
