[package]
name = "tinman-test"
version = "0.5.0-dev1-revert"
authors = ["Mike Leany <55358344+mikeleany@users.noreply.github.com>"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
tinman = { path = ".." }
chess = { path = "../chess" }
protocols = { path = "../protocols" }
log = "0.4.8"
simplelog = "0.7.4"
serde = "1.0"
serde_yaml = "0.8"
rand = "0.7.3"
chrono = "0.4.10"
hostname = "0.3.0"

[dependencies.clap]
version = "2.33.0"
features = [ "wrap_help" ]
